@@ -15,8 +15,8 @@ import net.md_5.bungee.api.chat.BaseComponent;
 import net.md_5.bungee.api.chat.TextComponent;
 import org.apache.commons.lang3.StringUtils;
 import org.betonquest.betonquest.BetonQuest;
+import org.betonquest.betonquest.api.config.QuestPackage;
 import org.betonquest.betonquest.config.Config;
-import org.betonquest.betonquest.config.ConfigPackage;
 import org.betonquest.betonquest.conversation.ChatConvIO;
 import org.betonquest.betonquest.conversation.Conversation;
 import org.betonquest.betonquest.utils.LocalChatPaginator;
@@ -44,7 +44,6 @@ import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @SuppressWarnings({"PMD.CyclomaticComplexity", "PMD.GodClass", "PMD.TooManyFields", "PMD.TooManyMethods",
@@ -93,11 +92,10 @@ public class MenuConvIO extends ChatConvIO {
     public MenuConvIO(final Conversation conv, final String playerID) {
         super(conv, playerID);
 
-        // Load Configuration from custom.yml with some sane defaults, loading our current package last
-        for (final ConfigPackage pack : Stream.concat(
+        for (final QuestPackage pack : Stream.concat(
                 Config.getPackages().values().stream().filter(p -> p != conv.getPackage()),
-                Stream.of(conv.getPackage())).collect(Collectors.toList())) {
-            final ConfigurationSection section = pack.getCustom().getConfig().getConfigurationSection("menu_conv_io");
+                Stream.of(conv.getPackage())).toList()) {
+            final ConfigurationSection section = pack.getConfig().getConfigurationSection("menu_conv_io");
             if (section == null) {
                 continue;
             }
@@ -125,39 +123,36 @@ public class MenuConvIO extends ChatConvIO {
         try {
             for (final CONTROL control : Arrays.stream(configControlCancel.split(","))
                     .map(string -> string.toUpperCase(Locale.ROOT))
-                    .map(CONTROL::valueOf)
-                    .collect(Collectors.toList())) {
+                    .map(CONTROL::valueOf).toList()) {
                 if (!controls.containsKey(control)) {
                     controls.put(control, ACTION.CANCEL);
                 }
             }
         } catch (final IllegalArgumentException e) {
-            LOG.warn(conv.getPackage(), conv.getPackage().getName() + ": Invalid data for 'control_cancel': " + configControlCancel, e);
+            LOG.warn(conv.getPackage(), conv.getPackage().getPackagePath() + ": Invalid data for 'control_cancel': " + configControlCancel, e);
         }
         try {
             for (final CONTROL control : Arrays.stream(configControlSelect.split(","))
                     .map(string -> string.toUpperCase(Locale.ROOT))
-                    .map(CONTROL::valueOf)
-                    .collect(Collectors.toList())) {
+                    .map(CONTROL::valueOf).toList()) {
 
                 if (!controls.containsKey(control)) {
                     controls.put(control, ACTION.SELECT);
                 }
             }
         } catch (final IllegalArgumentException e) {
-            LOG.warn(conv.getPackage(), conv.getPackage().getName() + ": Invalid data for 'control_select': " + configControlSelect, e);
+            LOG.warn(conv.getPackage(), conv.getPackage().getPackagePath() + ": Invalid data for 'control_select': " + configControlSelect, e);
         }
         try {
             for (final CONTROL control : Arrays.stream(configControlMove.split(","))
                     .map(string -> string.toUpperCase(Locale.ROOT))
-                    .map(CONTROL::valueOf)
-                    .collect(Collectors.toList())) {
+                    .map(CONTROL::valueOf).toList()) {
                 if (!controls.containsKey(control)) {
                     controls.put(control, ACTION.MOVE);
                 }
             }
         } catch (final IllegalArgumentException e) {
-            LOG.warn(conv.getPackage(), conv.getPackage().getName() + ": Invalid data for 'control_move': " + configControlMove, e);
+            LOG.warn(conv.getPackage(), conv.getPackage().getPackagePath() + ": Invalid data for 'control_move': " + configControlMove, e);
         }
     }
 
@@ -456,7 +451,7 @@ public class MenuConvIO extends ChatConvIO {
 
         final List<String> npcLines = Arrays.stream(LocalChatPaginator.wordWrap(
                         Utils.replaceReset(StringUtils.stripEnd(msgNpcText, "\n"), configNpcTextReset), configLineLength, configNpcWrap))
-                .collect(Collectors.toList());
+                .toList();
 
         // Provide for as many options as we can fit but if there is lots of npcLines we will reduce this as necessary
         // own to a minimum of 1.
@@ -505,9 +500,8 @@ public class MenuConvIO extends ChatConvIO {
                         .replace("{npc_name}", npcName);
 
                 optionLines = Arrays.stream(LocalChatPaginator.wordWrap(
-                                Utils.replaceReset(StringUtils.stripEnd(optionText, "\n"), configOptionSelectedReset),
-                                configLineLength, configOptionSelectedWrap))
-                        .collect(Collectors.toList());
+                        Utils.replaceReset(StringUtils.stripEnd(optionText, "\n"), configOptionSelectedReset),
+                        configLineLength, configOptionSelectedWrap)).toList();
 
 
             } else {
@@ -516,9 +510,8 @@ public class MenuConvIO extends ChatConvIO {
                         .replace("{npc_name}", npcName);
 
                 optionLines = Arrays.stream(LocalChatPaginator.wordWrap(
-                                Utils.replaceReset(StringUtils.stripEnd(optionText, "\n"), configOptionTextReset),
-                                configLineLength, configOptionWrap))
-                        .collect(Collectors.toList());
+                        Utils.replaceReset(StringUtils.stripEnd(optionText, "\n"), configOptionTextReset),
+                        configLineLength, configOptionWrap)).toList();
 
             }
 
